overflow scroll Box Add-Issue

--- a/src/app/modules/issues/add-issue/add-issue.component.scss
+++ b/src/app/modules/issues/add-issue/add-issue.component.scss
@@ -10,6 +10,7 @@
 
 .content-inside {
     width: fit-content;
+    overflow: scroll;
 }
 
 .square {
